<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anime Mania</string>
    <string name="action_overflow">More&#8230;</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="about_developer">Developer: Example</string>
    <string name="about_developer_email">Email: example@example.com</string>
    <string name="app_version">Version 1.0</string>
    <string name="copyright">Apache License</string>
    
    <string name="bunny">Big Buck Bunny</string>
    
    
    <string name="cache_cleared">Cache Cleared Successfully!</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="sharing_error">No Applications Found For Sharing!</string>
    <string name="back_clicked">Please click BACK again to exit</string>
    <string name="action_item_source_1">Source 1</string>
    <string name="action_item_source_2">Source 2</string>
    
    <string name="promotion_dialog_title">The Promoiton App</string>
    <string name="promotion_dialog_later_button_title">Later</string>
    <string name="promotion_dialog_install_button_title">Install</string>
    
    
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_rate">Rate!</string>
    <string name="action_other_apps">Other Apps</string>
    <string name="action_extra_settings">Settings</string>
    <string name="action_about">About</string>
    
    <string name="action_exit">Exit</string>
    <string name="action_refresh_list">Refresh List</string>
    
    
    <string name="loading_error_dialog_title">Loading Error&#8230;</string>
    <string name="loading_error_dialog_message">Internet connection is slow or does not exist.</string>
    <string name="loading_error_dialog_retry_button_title">Retry</string>
    <string name="loading_error_dialog_cancel_button_title">Cancel</string>
    
    <string name="rate_dialog_title">Rate?!</string>
    <string name="rate_dialog_message">If you enjoy using \"Anime Mania\", 
        would you mind taking a moment to rate it? It won\'t take more than a minute. 
        Thanks for your support!
        </string>
    <string name="rate_dialog_later_button_title">Later</string>
    <string name="rate_dialog_rate_button_title">Rate!</string>
    

    <string name="title_activity_video">VideoViewerActivity</string>
    <string name="video_activity_error">Sorry, this video cannot be played.
        \nPlease try the other source.
    </string>
    <string name="episodelist_activity_error">Please, make sure that your internet connection is present!</string>
    <string name="cartoon_activity_error">Server is not responding, please try again later.</string>
    
    <string name="share_app_chooser">Share this awesome app via</string>
    <string name="share_subject">Check out this android app! </string>
    <string name="play_store_app_uri">https://play.google.com/store/apps/details?id=</string>
    <string name="share_string">The Greatest Android App, </string>
    <string name="play_store_not_reached">Play Store can not be accessed!</string>
    <string name="other_apps_query">Example Developer</string>
    
    <!-- start episode and season names -->
    
    <string name="bunny_series_name">Big Buck Bunny Series</string>
    
    <!-- end episode and season names -->

</resources>
