<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.example.animemania="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/episode_list_menu_item_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        com.example.animemania:showAsAction="ifRoom"/>
    
    <!--  
    <item
        android:id="@+id/menu_item_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_overflow"
        com.example.animemania:showAsAction="always">
    </item>
    -->
    
    <item
        android:id="@+id/menu_item_refresh_list"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh_list"
        com.example.animemania:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/episode_list_menu_item_rate"
        android:icon="@drawable/ic_action_rate"
        android:title="@string/action_rate"
        com.example.animemania:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/episode_list_menu_item_other_apps"
        android:icon="@drawable/ic_action_download"
        android:title="@string/action_other_apps"
        com.example.animemania:showAsAction="ifRoom|withText"/>
    
    <item
        android:id="@+id/episode_list_menu_item_clear_cache"
        android:icon="@drawable/ic_action_clear_cache"
        android:title="@string/action_clear_cache"
        com.example.animemania:showAsAction="ifRoom|withText" />
    
    <item
        android:id="@+id/episode_list_menu_item_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        com.example.animemania:showAsAction="ifRoom|withText"/>
</menu>